colocano audio no site

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <source media="(max-width: 1050px )" srcset="imagens/img-m.png" type="image/png">
         <img src="imagens/img-g.png" alt="imagen flexivel">
     </picture>
+    <h1>reproduzindo audio</h1>
+    <p>vamos aprender a reproduzir audio</p>
+    <audio src="midia/musica.mp3" controls autoplay></audio>
 
 </body>
 </html>
